Fixed background to stretch at large screens.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,8 @@
 @import 'bootstrap-icons/font/bootstrap-icons.min.css';
 
 html, body { 
-    height: 100%;
     background-image:url(assets/images/bg.jpg);
+    background-size: cover;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
